--- a/src/app/home/b2b-flows-manage/node-properties/node-properties.component.html
+++ b/src/app/home/b2b-flows-manage/node-properties/node-properties.component.html
@@ -22,7 +22,7 @@
         <input id="nodeName" type="text" class="form-control" [(ngModel)]="currNode.name"
             (ngModelChange)="changesDone.emit()">
     </div>
-    <div class="form-group">
+    <div class="form-group" *ngIf="currNode?.type!='ERROR'">
         <label class="font-14 fw-400 text-dark" for="nodeType">Node Type</label>
         <select id="nodeType" class="form-control" [(ngModel)]="currNode.type"
             (ngModelChange)="onTypeChange($event); changesDone.emit()">
@@ -44,26 +44,28 @@
         <odp-input-data-selector class="d-flex" [edit]="edit" [(data)]="currNode.options.body" [nodeList]="nodeList" [currNode]="currNode">
         </odp-input-data-selector>
     </div> -->
-    <div *ngIf="currNode?.type!='RESPONSE' && !isInputNode" class="form-group">
-        <label class="font-14 fw-400 text-dark mb-0" for="inputDataStructure">Input Data Structure
-            <span class="text-muted"><i>(optional)</i></span>
-        </label>
-        <small class="form-text text-muted mb-3">Set the data structure that this node will accept</small>
-        <odp-data-structure-selector id="inputDataStructure" class="d-flex" [edit]="edit"
-            [format]="currNode.dataStructure?.incoming" (formatChange)="onFormatChange($event,'incoming')"
-            [hideGeneric]="currNode?.type=='MAPPING'">
-        </odp-data-structure-selector>
-    </div>
-    <div *ngIf="currNode?.type!='DATASERVICE'" class="form-group">
-        <label class="font-14 fw-400 text-dark mb-0" for="outputDataStructure">Output Data Structure
-            <span class="text-muted"><i>(optional)</i></span>
-        </label>
-        <small class="form-text text-muted mb-3">Set the data structure that this node will return</small>
-        <odp-data-structure-selector id="outputDataStructure" class="d-flex" [edit]="edit"
-            [format]="currNode.dataStructure?.outgoing" (formatChange)="onFormatChange($event,'outgoing')"
-            [hideGeneric]="currNode?.type=='MAPPING'">
-        </odp-data-structure-selector>
-    </div>
+    <ng-container *ngIf="currNode?.type!='ERROR'">
+        <div *ngIf="currNode?.type!='RESPONSE' && !isInputNode" class="form-group">
+            <label class="font-14 fw-400 text-dark mb-0" for="inputDataStructure">Input Data Structure
+                <span class="text-muted"><i>(optional)</i></span>
+            </label>
+            <small class="form-text text-muted mb-3">Set the data structure that this node will accept</small>
+            <odp-data-structure-selector id="inputDataStructure" class="d-flex" [edit]="edit"
+                [format]="currNode.dataStructure?.incoming" (formatChange)="onFormatChange($event,'incoming')"
+                [hideGeneric]="currNode?.type=='MAPPING'">
+            </odp-data-structure-selector>
+        </div>
+        <div *ngIf="currNode?.type!='DATASERVICE'" class="form-group">
+            <label class="font-14 fw-400 text-dark mb-0" for="outputDataStructure">Output Data Structure
+                <span class="text-muted"><i>(optional)</i></span>
+            </label>
+            <small class="form-text text-muted mb-3">Set the data structure that this node will return</small>
+            <odp-data-structure-selector id="outputDataStructure" class="d-flex" [edit]="edit"
+                [format]="currNode.dataStructure?.outgoing" (formatChange)="onFormatChange($event,'outgoing')"
+                [hideGeneric]="currNode?.type=='MAPPING'">
+            </odp-data-structure-selector>
+        </div>
+    </ng-container>
     <ng-container *ngIf="isInputNode">
         <ng-container *ngIf="currNode?.type=='API'">
             <div class="form-group">
