--- a/src/app/home/b2b-flows-manage/b2b-flows-manage.component.html
+++ b/src/app/home/b2b-flows-manage/b2b-flows-manage.component.html
@@ -210,6 +210,10 @@
         <span class="node-icon font-16 fw-400 dsi dsi-mapping mr-2"></span>
         <span class="font-13 fw-400">Mapping</span>
     </div>
+    <div class="node-item border-bottom px-3 py-2 d-flex align-items-center hover" (click)="addNode($event,'TRANSFORM')">
+        <span class="node-icon font-16 fw-400 dsi dsi-mapping mr-2"></span>
+        <span class="font-13 fw-400">Transform</span>
+    </div>
     <div class="node-item border-bottom px-3 py-2 d-flex align-items-center hover"
         (click)="addNode($event,'CODEBLOCK')">
         <span class="node-icon font-16 fw-400 dsi dsi-object mr-2 text-muted"></span>
