--- a/src/app/home/b2b-flows-manage/error-node/error-node.component.html
+++ b/src/app/home/b2b-flows-manage/error-node/error-node.component.html
@@ -1,5 +1,6 @@
 <svg>
-    <g class="node-block" [ngStyle]="style" class="hover" [attr.data-id]="node._id">
+    <g class="node-block" [style]="'transform: translate('+node.coordinates.x+'px,'+ node.coordinates.y+'px)'"
+        class="hover" [attr.data-id]="node._id">
         <g [class.active]="isSelected" [attr.data-id]="node._id">
             <rect x="0" y="0" width="140" height="36" rx="6" (click)="openProperties($event)"
                 [attr.data-id]="node._id" />
@@ -16,8 +17,8 @@
         <rect class="node-anchor end" [class.active]="isActive('end')" [attr.data-id]="node._id" x="134" y="12"
             width="12" height="12" rx="6" (click)="onAnchorClick($event)" />
         <foreignObject width="18" height="18" x="10" y="9" [attr.data-id]="node._id">
-            <span xmlns="http://www.w3.org/1999/xhtml" class="node-icon text-danger font-18 fw-500 dsi dsi-danger-circle"
-                [attr.data-id]="node._id"></span>
+            <span xmlns="http://www.w3.org/1999/xhtml"
+                class="node-icon text-danger font-18 fw-500 dsi dsi-danger-circle" [attr.data-id]="node._id"></span>
         </foreignObject>
     </g>
     <g *ngFor="let p of successPaths;let i=index">
