--- a/src/app/home/b2b-flows-manage/node-properties/node-mapping/source-fields/source-fields.component.scss
+++ b/src/app/home/b2b-flows-manage/node-properties/node-mapping/source-fields/source-fields.component.scss
@@ -1,9 +1,87 @@
-.field-block {
-    position: relative;
-    overflow: hidden;
-    min-height: 46px;
+@import "src/assets/scss/bootstrap/_functions.scss";
+@import "src/assets/scss/bootstrap/_variables.scss";
 
-    .input-wrapper {
-        max-width: 120px;
+rect {
+    fill: #fff;
+    stroke: #ccc;
+    stroke-width: 1;
+}
+
+path {
+    fill: none;
+    stroke: #666;
+    stroke-width: 2;
+
+    &:hover {
+        cursor: pointer;
+        stroke-width: 3;
     }
+
+    &.selected {
+        stroke: $accent;
+        stroke-width: 3;
+    }
+}
+
+.svg-path-transparent {
+    fill: none;
+    stroke: #666;
+    stroke-opacity: 0%;
+    stroke-width: 20;
+
+    &:hover {
+        cursor: pointer;
+        stroke-width: 20; //increase the value to increase the hover area
+    }
+}
+
+.svg-path-transparent:hover~path {
+    cursor: pointer;
+    stroke-width: 3;
+}
+
+text {
+    stroke-width: 0;
+    fill: #333;
+    font-size: 12px;
+}
+
+text.path-text {
+    &.selected {
+        stroke-width: 0.75;
+        stroke: #000;
+    }
+}
+
+.active {
+    .rect {
+        fill: rgba($accent, 0.3);
+    }
+
+    text:not(.node-name) {
+        stroke-width: 0.75 !important;
+        stroke: #ccc;
+    }
+}
+
+.node-anchor {
+    fill: #fff;
+
+    &:hover {
+        fill: $secondary;
+    }
+
+    &.active {
+        fill: $accent;
+    }
+}
+
+.delete-icon {
+    fill: #cfcfcf;
+    stroke: #cccc;
+    stroke-width: 1;
+}
+
+.indent {
+    transform: translateX(50px);
 }
