--- a/src/app/home/b2b-flows-manage/node-properties/node-mapping/node-mapping.component.scss
+++ b/src/app/home/b2b-flows-manage/node-properties/node-mapping/node-mapping.component.scss
@@ -1,75 +1,10 @@
 .mapping-container {
+    min-height: calc(100vh - 160px);
+    max-height: calc(100vh - 160px);
+    overflow-y: auto;
 
-    .source-fields,
-    .destination-fields {
-        min-height: calc(100vh - 160px);
-
-        .sub-header {
-            min-height: 72px;
-            max-height: 72px;
-        }
-    }
-
-    .source-fields {
-        width: 0px;
-
-        &.show {
-            width: 340px;
-        }
-    }
-
-    .destination-fields {
-        min-width: 460px;
-        width: 100%;
-    }
-
-    .field-block {
-        position: relative;
-        overflow: hidden;
-        min-height: 46px;
-
-        .input-wrapper {
-            overflow: hidden;
-        }
-
-        .delete-btn {
-            position: absolute;
-            right: -100px;
-            transition: 0.2s;
-            z-index: 1;
-        }
-
-        .add-source {
-            visibility: hidden;
-            min-width: 120px
-        }
-
-        &:hover {
-            .delete-btn {
-                right: 0px;
-            }
-
-            .add-source {
-                visibility: visible;
-            }
-        }
-    }
-
-    .source-tag {
-        min-width: 107px;
-        max-width: 107px;
-        min-height: 28px;
-        max-height: 28px;
-        border-radius: 16px;
-    }
-
-    .formula-builder {
-        z-index: 2;
-        // width: calc(100% - 140px);
-
-        textarea.form-control {
-            font-family: monospace;
-            height: calc(100% - 164px);
-        }
+    .mapping-svg {
+        min-height: 500vh;
+        // min-height: calc(100vh - 162px);
     }
 }
