--- a/src/app/home/b2b-flows-manage/node-properties/node-mapping/target-fields/target-fields.component.scss
+++ b/src/app/home/b2b-flows-manage/node-properties/node-mapping/target-fields/target-fields.component.scss
@@ -1,43 +1,87 @@
-.field-block {
-    // position: relative;
-    overflow: hidden;
-    min-height: 46px;
+@import "src/assets/scss/bootstrap/_functions.scss";
+@import "src/assets/scss/bootstrap/_variables.scss";
 
-    .input-wrapper {
-        max-width: 120px;
+rect {
+    fill: #fff;
+    stroke: #ccc;
+    stroke-width: 1;
+}
+
+path {
+    fill: none;
+    stroke: #666;
+    stroke-width: 2;
+
+    &:hover {
+        cursor: pointer;
+        stroke-width: 3;
     }
 
-    .add-source {
-        visibility: hidden;
-        min-width: 120px
-    }
-
-    > div:hover {
-        > div > .add-source {
-            visibility: visible;
-        }
+    &.selected {
+        stroke: $accent;
+        stroke-width: 3;
     }
 }
 
-.source-tag {
-    min-width: 107px;
-    max-width: 107px;
-    min-height: 28px;
-    max-height: 28px;
-    border-radius: 16px;
+.svg-path-transparent {
+    fill: none;
+    stroke: #666;
+    stroke-opacity: 0%;
+    stroke-width: 20;
+
+    &:hover {
+        cursor: pointer;
+        stroke-width: 20; //increase the value to increase the hover area
+    }
 }
 
-
-.formula-builder {
-    z-index: 2;
-    top: 50px;
-    right: 100px;
-    width: calc(100vw - 200px);
-    height: calc(100vh - 100px);
-    overflow: auto;
-    box-shadow: 0px 0px 3px rgba($color: #000000, $alpha: 0.5);
+.svg-path-transparent:hover~path {
+    cursor: pointer;
+    stroke-width: 3;
 }
 
-odp-source-selector {
-    z-index: 2;
+text {
+    stroke-width: 0;
+    fill: #333;
+    font-size: 12px;
+}
+
+text.path-text {
+    &.selected {
+        stroke-width: 0.75;
+        stroke: #000;
+    }
+}
+
+.active {
+    .rect {
+        fill: rgba($accent, 0.3);
+    }
+
+    text:not(.node-name) {
+        stroke-width: 0.75 !important;
+        stroke: #ccc;
+    }
+}
+
+.node-anchor {
+    fill: #fff;
+
+    &:hover {
+        fill: $secondary;
+    }
+
+    &.active {
+        fill: $accent;
+    }
+}
+
+.delete-icon {
+    fill: #cfcfcf;
+    stroke: #cccc;
+    stroke-width: 1;
+}
+
+.indent {
+    transform: translateX(50px);
 }
