--- a/src/app/home/b2b-flows-manage/node-properties/node-mapping/source-fields/source-fields.component.scss
+++ b/src/app/home/b2b-flows-manage/node-properties/node-mapping/source-fields/source-fields.component.scss
@@ -1,6 +1,11 @@
 @import "src/assets/scss/bootstrap/_functions.scss";
 @import "src/assets/scss/bootstrap/_variables.scss";
 
+.node-name {
+    height: 48px;
+    word-break: break-all;
+}
+
 rect {
     fill: #fff;
     stroke: #ccc;
