--- a/src/app/home/b2b-flows-manage/node-properties/node-mapping/source-fields/source-fields.component.scss
+++ b/src/app/home/b2b-flows-manage/node-properties/node-mapping/source-fields/source-fields.component.scss
@@ -6,6 +6,15 @@
     word-break: break-all;
 }
 
+.node-icon-bg {
+    width: 26px;
+    height: 26px;
+    border-radius: 16px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
 rect {
     fill: #fff;
     stroke: #ccc;
