--- a/src/app/home/b2b-flows-manage/node-properties/node-mapping/target-fields/target-fields.component.html
+++ b/src/app/home/b2b-flows-manage/node-properties/node-mapping/target-fields/target-fields.component.html
@@ -17,22 +17,40 @@
             </span>
         </foreignObject>
         <foreignObject width="18" height="18" x="10" y="12" [attr.data-id]="definition.properties.dataPath">
-            <span xmlns="http://www.w3.org/1999/xhtml" class="node-icon font-10 fw-500 text-success underline"
+            <span xmlns="http://www.w3.org/1999/xhtml" class="node-icon font-10 fw-500 text-success underline hover"
                 [attr.data-id]="definition.properties.dataPath"><i xmlns="http://www.w3.org/1999/xhtml">fn()</i></span>
         </foreignObject>
-        <foreignObject width="18" height="18" x="46" y="15" [attr.data-id]="definition.properties.dataPath">
-            <span xmlns="http://www.w3.org/1999/xhtml" *ngIf="definition.type=='String'"
-                class="node-icon font-18 fw-500 dsi dsi-text" [attr.data-id]="definition.properties.dataPath"></span>
-            <span xmlns="http://www.w3.org/1999/xhtml" *ngIf="definition.type=='Number'"
-                class="node-icon font-18 fw-500 dsi dsi-number" [attr.data-id]="definition.properties.dataPath"></span>
-            <span xmlns="http://www.w3.org/1999/xhtml" *ngIf="definition.type=='Boolean'"
-                class="node-icon font-18 fw-500 dsi dsi-boolean" [attr.data-id]="definition.properties.dataPath"></span>
-            <span xmlns="http://www.w3.org/1999/xhtml" *ngIf="definition.type=='Date'"
-                class="node-icon font-18 fw-500 dsi dsi-date" [attr.data-id]="definition.properties.dataPath"></span>
-            <span xmlns="http://www.w3.org/1999/xhtml" *ngIf="definition.type=='Object'"
-                class="node-icon font-18 fw-500 dsi dsi-object" [attr.data-id]="definition.properties.dataPath"></span>
-            <span xmlns="http://www.w3.org/1999/xhtml" *ngIf="definition.type=='Array'"
-                class="node-icon font-18 fw-500 dsi dsi-array" [attr.data-id]="definition.properties.dataPath"></span>
+        <foreignObject width="26" height="26" x="42" y="11" [attr.data-id]="definition.properties.dataPath">
+            <div xmlns="http://www.w3.org/1999/xhtml" *ngIf="definition.type=='String'" class="node-icon-bg"
+                style="background-color: #E7CBD4;">
+                <span xmlns="http://www.w3.org/1999/xhtml" class="node-icon font-18 fw-500 dsi dsi-text"
+                    [attr.data-id]="definition.properties.dataPath"></span>
+            </div>
+            <div xmlns="http://www.w3.org/1999/xhtml" *ngIf="definition.type=='Number'" class="node-icon-bg"
+                style="background-color: #E7CBE6;">
+                <span xmlns="http://www.w3.org/1999/xhtml" class="node-icon font-18 fw-500 dsi dsi-number"
+                    [attr.data-id]="definition.properties.dataPath"></span>
+            </div>
+            <div xmlns="http://www.w3.org/1999/xhtml" *ngIf="definition.type=='Boolean'" class="node-icon-bg"
+                style="background-color: #CBE7CE;">
+                <span xmlns="http://www.w3.org/1999/xhtml" class="node-icon font-18 fw-500 dsi dsi-boolean"
+                    [attr.data-id]="definition.properties.dataPath"></span>
+            </div>
+            <div xmlns="http://www.w3.org/1999/xhtml" *ngIf="definition.type=='Date'" class="node-icon-bg"
+                style="background-color: #FFE6D8;">
+                <span xmlns="http://www.w3.org/1999/xhtml" class="node-icon font-18 fw-500 dsi dsi-date"
+                    [attr.data-id]="definition.properties.dataPath"></span>
+            </div>
+            <div xmlns="http://www.w3.org/1999/xhtml" *ngIf="definition.type=='Object'" class="node-icon-bg"
+                style="background-color: #D7D4EF;">
+                <span xmlns="http://www.w3.org/1999/xhtml" class="node-icon font-18 fw-500 dsi dsi-object"
+                    [attr.data-id]="definition.properties.dataPath"></span>
+            </div>
+            <div xmlns="http://www.w3.org/1999/xhtml" *ngIf="definition.type=='Array'" class="node-icon-bg"
+                style="background-color: #D3E4FF;">
+                <span xmlns="http://www.w3.org/1999/xhtml" class="node-icon font-18 fw-500 dsi dsi-array"
+                    [attr.data-id]="definition.properties.dataPath"></span>
+            </div>
         </foreignObject>
     </g>
     <!-- <g class="indent" *ngFor="let item of definition.definition;;let i=index">
