--- a/src/app/home/b2b-flows-manage/node-properties/data-transform/data-creator/data-creator.component.html
+++ b/src/app/home/b2b-flows-manage/node-properties/data-transform/data-creator/data-creator.component.html
@@ -1,6 +1,6 @@
 <div class="">
     <button type="button" class="btn btn-light rounded-0 w-100" (click)="configureWindow=!configureWindow">
-        <span *ngIf="!data">Configure</span>
+        <span *ngIf="!data">Set Value</span>
         <span *ngIf="data">{{data}}</span>
     </button>
 </div>
