--- a/src/app/home/b2b-flows-manage/node-properties/data-transform/data-transform.component.html
+++ b/src/app/home/b2b-flows-manage/node-properties/data-transform/data-transform.component.html
@@ -1,6 +1,6 @@
 <div>
     <div class="d-flex align-items-center justify-content-between">
-        <span class="font-20 fw-500">Data Transform</span>
+        <span class="font-20 fw-500">Create Payload</span>
         <button type="button" class="btn btn-link p-0">
             <span class="dsi dsi-close text-dark ignore-outside" (click)="cancel()"></span>
         </button>
